# Steering_Fast

./: .env.template  .gitignore  CHANGES.md  LICENSE  README.md  README_prefix_optimization.md  pyproject.toml
outputs/prefix_optimization/llama_3.1_8b/fears/analysis/: all_results.csv  analysis_report.txt
outputs_s3_test/: timing.csv
scripts/: env.sh  run_gcg.sh  run_generalization.sh  run_hyperparam_and_steering.sh  run_multi_stmt_test.sh  run_pez_and_reachability.sh  run_pez_v2.sh  run_pipeline.py  run_prefix_opt_smoke.sh  slurm_array.sh  submit_full_pipeline.sh
steering_fast/: __init__.py  config.py  model_loader.py  utils.py
steering_fast/conf/: config.yaml
steering_fast/conf/data/: fears.yaml  moods.yaml  personalities.yaml  personas.yaml  places.yaml
steering_fast/conf/experiment/: fast.yaml  full.yaml  smoke_test.yaml  timing.yaml
steering_fast/conf/model/: llama_3_1_70b.yaml  llama_3_1_8b.yaml  llama_3_3_70b.yaml  qwen_14b.yaml  qwen_32b.yaml
steering_fast/conf/steering/: linear.yaml  logistic.yaml  mean_difference.yaml  pca.yaml  rfm.yaml
steering_fast/core/: __init__.py  datasets.py  direction_utils.py  utils.py
steering_fast/data/: __init__.py  statements.py
steering_fast/directions/: __init__.py
steering_fast/evaluation/: __init__.py  openai_eval.py
steering_fast/extraction/: __init__.py  attention.py  hidden_states.py
steering_fast/generation/: __init__.py  hooks.py
steering_fast/pipeline/: __init__.py  runner.py  stage0.py  stage1.py  stage2.py  stage3.py  stage4.py
steering_fast/prefix_optimization/: __init__.py  analyze_results.py  config.py  evaluate_generalization.py  evaluate_steering.py  initialization.py  losses.py  run_all.py  run_experiment.py
steering_fast/prefix_optimization/methods/: __init__.py  gcg.py  gradient.py  jacobian.py  logit_lens.py  pez.py  pez_v2.py
steering_fast/tracking/: __init__.py  checkpoint.py  timer.py  wandb_tracker.py
tests/: test_smoke.py
